계산기 세 번쨰 디자인 - 버튼 누르는 효과 변경

--- a/calculator.html
+++ b/calculator.html
@@ -15,37 +15,37 @@
 
       <div id="btns">
         <div class="line">
-            <button>AC</button>
-            <button>+/-</button>
-            <button>%</button>
-            <button>/</button>
+            <button class="oper">AC</button>
+            <button class="oper">+/-</button>
+            <button class="oper">%</button>
+            <button class="oper">/</button>
         </div>
 
         <div class="line">
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>x</button>
+            <button class="oper">x</button>
         </div>
 
         <div class="line">
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>-</button>
+            <button class="oper">-</button>
         </div>
 
         <div class="line">
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>+</button>
+            <button class="oper">+</button>
         </div>
 
         <div class="line">
             <button id="flexGrow" >0</button>
             <button>.</button>
-            <button>=</button>
+            <button class="oper">=</button>
         </div>
       </div>
     </div>
