--- a/calculator.html
+++ b/calculator.html
@@ -9,45 +9,44 @@
   </head>
   <body>
     <div id="container">
-      <div id="panel">
-        <p>0</p>
-      </div>
+      <div id="panel">0</div>
 
       <div id="btns">
         <div class="line">
-          <button class="oper">AC</button>
+          <button class="clear">AC</button>
           <button class="oper">+/-</button>
           <button class="oper">%</button>
           <button class="oper">/</button>
         </div>
 
         <div class="line">
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
           <button class="oper">x</button>
         </div>
 
         <div class="line">
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
           <button class="oper">-</button>
         </div>
 
         <div class="line">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
           <button class="oper">+</button>
         </div>
 
         <div class="line">
-          <button id="flexGrow">0</button>
-          <button>.</button>
-          <button class="oper">=</button>
+          <button id="flexGrow" class="number">0</button>
+          <button class="decimal">.</button>
+          <button class="calculate">=</button>
         </div>
       </div>
     </div>
+    <script src='./calculate.js'></script>
   </body>
 </html>
