계산기 기능 2 - 연산 과정 나타내기

--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div id="container">
-      <div id="panel">0</div>
+      <div id="panel">
+        <div class="calproce display">klkl</div>
+        <div id="display--number">0</div>
+      </div>
 
       <div id="btns">
         <div class="line">
@@ -47,6 +50,6 @@
         </div>
       </div>
     </div>
-    <script src='./calculate.js'></script>
+    <script src="./calculate.js"></script>
   </body>
 </html>
