일부 구조 수정

--- a/calculator.html
+++ b/calculator.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
       <div id="panel">
-        <div class="calproce display">klkl</div>
+        <div class="calproce display"></div>
         <div id="display--number">0</div>
       </div>
 
